--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -1,7 +1,7 @@
 {
   "name": "testcafe_workshop",
   "version": "1.0.0",
-  "description": "TestCafe Workshop Assignment",
+  "description": "Frontend - Onboarding Challenge",
   "main": "index.js",
   "scripts": {
     "test-all-chrome": "testcafe chrome ./tests --reporter html:output/report.html",
@@ -9,7 +9,8 @@
     "test-all-edge": "testcafe edge ./tests --reporter html:output/report.html",
     "test-all-ie": "testcafe ie ./tests --reporter html:output/report.html",
     "test-all-browsers": "testcafe all ./tests --reporter html:output/report.html",
-	"lint": "eslint"
+    "lint": "eslint",
+	"sonarqube": "sonar-scanner"
   },
   "dependencies": {
     "dotenv": "^9.0.2",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "eslint": "^7.32.0",
-    "eslint-plugin-testcafe": "^0.2.1"
+    "eslint-plugin-testcafe": "^0.2.1",
+    "sonar-scanner": "^3.1.0"
   }
 }
