--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -9,7 +9,7 @@
     "test-all-edge": "testcafe edge ./tests --reporter html:output/report.html",
     "test-all-ie": "testcafe ie ./tests --reporter html:output/report.html",
     "test-all-browsers": "testcafe all ./tests --reporter html:output/report.html",
-	"test-all-browserstack": "testcafe 'browserstack:chrome@92.0:Windows 10', 'browserstack:safari@13.1:OS X Catalina', 'browserstack:firefox@78.0:OS X Catalina', 'browserstack:opera@79.0:Windows XP' ./tests",
+	"test-all-browserstack": "testcafe 'browserstack:chrome@92.0:Windows 10', 'browserstack:safari@13.1:OS X Catalina', 'browserstack:firefox@78.0:OS X Catalina', 'browserstack:opera@79.0:Windows XP' ./tests --selector-timeout 30000",
     "lint": "eslint",
     "sonarqube": "sonar-scanner",
 	"browserstack": "testcafe -b browserstack"
